--- a/index.html
+++ b/index.html
@@ -151,43 +151,47 @@
         </div>
         <div class="content">
             <div class="card reveal">
-                <div class="card-img">
-                    <img src="./image/pexels-jaime-reimer-2662116.jpg" alt="">
-                </div>
+                <a href="https://juice-com.vercel.app/">
+                    <div class="card-img">
+                        <img src="./image/Juice.png" alt="">
+                    </div>
+                </a>
+            </div>
+
+            <div class="card reveal">
+                <a href="https://manhattan-ten.vercel.app/">
+                    <div class="card-img">
+                        <img src="./image/manhattan.png" alt="">
+                    </div>
+                </a>
+            </div>
+
+            <div class="card reveal">
+                <a href="https://my-teacher-five.vercel.app/">
+                    <div class="card-img">
+                        <img src="./image/myTeacher.json" alt="">
+                    </div>
+                </a>
+            </div>
+
+            <div class="card reveal">
+                <a href="https://car-web-eta.vercel.app/">
+                    <div class="card-img">
+                        <img src="./image/car-web.png" alt="">
+                    </div>
+                </a>
             </div>
 
             <div class="card reveal">
                 <div class="card-img">
-                    <img src="./image/pexels-jaime-reimer-2662116.jpg" alt="">
+                    <img src="./image/to be.jpg" alt="">
                 </div>
             </div>
 
-            <div class="card reveal">
-                <div class="card-img">
-                    <img src="./image/pexels-jaime-reimer-2662116.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="card reveal">
-                <div class="card-img">
-                    <img src="./image/pexels-jaime-reimer-2662116.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="card reveal">
-                <div class="card-img">
-                    <img src="./image/pexels-jaime-reimer-2662116.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="card reveal">
-                <div class="card-img">
-                    <img src="./image/pexels-jaime-reimer-2662116.jpg" alt="">
-                </div>
-            </div>
-            <div class="title reveal">
-                <a href="#" class="btn">See All</a>
-            </div>
+        </div>
+        <div class="title reveal">
+            <a href="#" class="btn">See All</a>
+        </div>
         </div>
     </section>
 
